# drone_passport_agent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  fetchNixpkgs.nix  get_objective.py  package.xml  release.nix  setup.py
launch/: agent.launch  composer.launch  objective_composer_service.launch
robonomics/: aira_de-direct.model  genrosbag.py  model.txt  objective.bag  result.bag  test_deamnd.yaml  test_demand.yaml
scripts/: agent_node  agent_node.py  objective_composer  objective_composer.py
src/de_direct/: ipfs_utils.py
