<?xml version="1.0"?>
<package format="2">
  <name>de_direct</name>
  <version>0.0.0</version>
  <description>The de_direct package</description>
  <maintainer email="alisher@aira.life">Alisher A. Khassanov</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>

</package>
