<?xml version="1.0"?>
<package format="2">
  <name>drone_passport_agent</name>
  <version>0.2.2</version>
  <description>The de_direct package</description>
  <author>Vadim Manaenko</author>
  <maintainer email="vadim.razorq@gmail.com">Vadim Manaenko</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>

</package>
